--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header {
     background: rgb(45, 41, 41);
     text-align: center;
     padding: 13px;
+    color: azure;
 }
 
 .main {
@@ -22,12 +23,13 @@ header {
     background: rgb(45, 41, 41);
     margin-left: 17vw;
     text-align: center;
+    color: whitesmoke;
 }
 #photo {
-    width: 300px; 
-    height: 250px;
+    width: 350px; 
+    height: 350px;
     float: right;
-    margin-right: 20vw;
+    margin-right: 15vw;
 }
 .about-me {
     max-width: 60vw;
