--- a/style.css
+++ b/style.css
@@ -2,11 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif; 
+    font-family: Raleway; 
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
-
 
 header {
     margin-left: 17vw;
@@ -24,15 +23,18 @@ header {
     margin-left: 17vw;
     text-align: center;
     color: whitesmoke;
+    
 }
 #photo {
-    width: 350px; 
-    height: 350px;
+    width: 500px; 
+    height: 500px;
     float: right;
-    margin-right: 15vw;
+    margin-right: 10vw;
 }
 .about-me {
-    max-width: 60vw;
+    max-width: 500px;
+    width: 500px;
+    margin-left: 200px;
     }
 
 .side-nav {
@@ -43,6 +45,7 @@ header {
     top: 0;
     left: 0;
     padding: 20px 30px;
+    text-align: center;
 }
 
 .nav-links {
