--- a/style.css
+++ b/style.css
@@ -89,3 +89,24 @@ header {
     max-width: 500px;
     width: 500px;
 }
+.form-control {
+    width: 500px;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid white;
+    margin-bottom: 20px;
+    color: whitesmoke;
+}
+form .submit {
+    background: whitesmoke;
+    border-color: transparent;
+    color: rgb(7, 7, 7);
+    font-size: 20px;
+    font-weight: bold;
+}
+
+form .submit:hover {
+    background-color: #C8C7C7;
+    cursor: pointer;
+}
